# ferric

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
crates/ferric_common/: Cargo.toml
crates/ferric_compiler/: Cargo.toml
crates/ferric_compiler/src/: lib.rs
crates/ferric_diagnostics/: Cargo.toml
crates/ferric_exhaust/: Cargo.toml
crates/ferric_infer/: Cargo.toml
crates/ferric_lexer/: Cargo.toml
crates/ferric_lsp/: .gitignore  Cargo.toml  build.rs
crates/ferric_lsp/src/: ast_lookup.rs  capabilities.rs  main.rs  pipeline.rs  server.rs  stdlib_names.rs
crates/ferric_lsp/src/extension/: formatter.rs  linter.rs  mod.rs
crates/ferric_lsp/src/handlers/: completion.rs  diagnostics.rs  document_symbols.rs  goto_def.rs  hover.rs  inlay_hints.rs  mod.rs
crates/ferric_lsp/vscode-extension/: .gitignore  .vscodeignore  language-configuration.json  package-lock.json  package.json
crates/ferric_lsp/vscode-extension/client/: extension.js
crates/ferric_manifest/: Cargo.toml
crates/ferric_module/: Cargo.toml
crates/ferric_parser/: Cargo.toml
crates/ferric_resolve/: Cargo.toml
crates/ferric_stdlib/: Cargo.toml
crates/ferric_traits/: Cargo.toml
crates/ferric_typecheck/: Cargo.toml
crates/ferric_vm/: ASYNC_COMPAT.md  Cargo.toml
crates/ferric_vm/src/: bytecode.rs  lib.rs
docs/: architecture.md  asyncawait.md  deferred-issues.md  option-result-gap.md
docs/tasks/: 00-setup-common.md  lsp-00-overview.md  lsp-01-ferric-common.md  lsp-02-crate-skeleton.md  lsp-03-textmate-grammar.md  lsp-04-diagnostics-symbols.md  lsp-05-completion-hover-goto.md  lsp-06-inlay-hints.md  lsp-07-vscode-extension.md  lsp.md  m1-01-lexer.md  m1-02-parser.md  m1-03-resolve.md  m1-04-typecheck.md  m1-05-vm.md  m1-06-stdlib.md  m1-07-diagnostics.md  m1-08-cli.md  m2-enhancements.md  m2.5-01-named-params.md  m2.5-02-require.md  m2.5-03-shell.md  m2.5-04-async-prep.md  m3-bytecode-compiler.md  m3-bytecode-vm.md  m3-type-inference.md  m4-algebraic-types.md  m5-traits.md  m6-production.md  m7-01-common-types.md  m7-02-lexer-parser.md  m7-03-manifest-resolver.md  m7-04-typecheck-vm.md  m8-00-overview.md  m8-01-common-types.md  m8-02-lexer-parser.md  m8-03-typecheck.md  m8-04-lowering.md  m8-05-vm-stdlib.md  module_system.md
examples/: complex_test.fe  debug_symbols.fe  diagnostic_test.fe  direct_mismatch.fe  error_test.fe  hello.fe  m2_comprehensive.fe  require_fail.fe  require_set.fe  require_warn.fe  shell_err_unclosed.fe  simple_call_test.fe  simple_fn_call.fe  simple_int.fe  simple_script.fe  stdlib_simple.fe  stdlib_test.fe  test.fe  type_error.fe  type_error_test.fe  type_mismatch_test.fe  working_test.fe
examples/complex_test/: complex_test.fe
examples/diagnostic_test/: expected.txt
examples/duplicate_test/: duplicate_test.fe  expected.txt
examples/function_test/: expected.txt  function_test.fe
examples/m2_comprehensive/: expected.txt
examples/m4_enum/: expected.txt  m4_enum.fe
examples/m4_struct/: m4_struct.fe
examples/m4_tuple/: m4_tuple.fe
examples/m4_unreachable_warn/: expected.txt  m4_unreachable_warn.fe
examples/m5_traits/: expected.txt  m5_traits.fe
examples/m6_arrays/: expected.txt  m6_arrays.fe
src/: main.rs
tests/: examples.rs
tools/: package-extension.sh
(+60 files in other folders)
