[workspace]
resolver = "2"
members = [
    "crates/ferric_common",
    "crates/ferric_lexer",
    "crates/ferric_parser",
    "crates/ferric_resolve",
    "crates/ferric_typecheck",
    "crates/ferric_vm",
    "crates/ferric_diagnostics",
    "crates/ferric_stdlib",
]

[package]
name = "ferric"
version = "0.1.0"
edition = "2024"

[dependencies]
ferric_common = { path = "crates/ferric_common" }
ferric_lexer = { path = "crates/ferric_lexer" }
ferric_parser = { path = "crates/ferric_parser" }
ferric_resolve = { path = "crates/ferric_resolve" }
ferric_typecheck = { path = "crates/ferric_typecheck" }
ferric_vm = { path = "crates/ferric_vm" }
ferric_diagnostics = { path = "crates/ferric_diagnostics" }
ferric_stdlib = { path = "crates/ferric_stdlib" }
