[package]
name = "ferric_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ferric_common = { path = "../ferric_common" }

[dev-dependencies]
ferric_lexer    = { path = "../ferric_lexer" }
ferric_parser   = { path = "../ferric_parser" }
ferric_resolve  = { path = "../ferric_resolve" }
ferric_typecheck = { path = "../ferric_typecheck" }
