[package]
name = "ferric_vm"
version = "0.1.0"
edition = "2024"

[dependencies]
ferric_common = { path = "../ferric_common" }
ferric_stdlib = { path = "../ferric_stdlib" }

[dev-dependencies]
ferric_lexer    = { path = "../ferric_lexer" }
ferric_parser   = { path = "../ferric_parser" }
ferric_resolve  = { path = "../ferric_resolve" }
ferric_infer    = { path = "../ferric_infer" }
ferric_compiler = { path = "../ferric_compiler" }
